<resources>
    <string name="app_name" translatable="false">Amerriсard</string>
    <string name="facebook_app_id" translatable="false">1734091590251956</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7353210906266235/7309964107</string>
    <string name="inline_ad_unit_id" translatable="false">ca-app-pub-7353210906266235/1263430503</string>
    <string name="fullscreen_ad_unit_id" translatable="false">ca-app-pub-7353210906266235/2740163704</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cards">Cards</string>
    <string name="category">Category</string>
    <string name="calendar">Calendar</string>
    <string name="favorite_cards">Favorite cards</string>
    <string name="sent_cards">Sent cards</string>
    <string name="manage_birthdays">Manage birthdays</string>
    <string name="settings">Settings</string>
    <string name="become_vip">Become VIP or Premium</string>
    <string name="become_vip_title">Become VIP</string>
    <string name="error_no_internet">Check your internet connection</string>
    <string name="no_cards_available">No cards available</string>
    <string name="no_cards_in_this_category">No cards in this category</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorite_cards">No favorite cards</string>
    <string name="premium">Premium</string>
    <string name="vip">VIP</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Trivial Drive</string>

    <!--Notifications-->
    <string name="notifications_title">New event!</string>


    <!-- Languages -->
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="language">Language</string>
    <string name="ok">Ok</string>
    <string name="scheduled_time">Scheduled time</string>
    <string name="celebrities">Celebrities</string>
    <string name="daily_notification">Daily birthday notification</string>
    <string name="send_card">Send a card</string>
    <string name="name">Name and Surname</string>
    <string name="add_birthday">Add birthday</string>
    <string name="birthday">Birthday</string>
    <string name="french" translatable="false">Français</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="loading">Loading...</string>
    <string name="create_birthday">Create</string>
    <string name="spanish" translatable="false">Español</string>

    <string-array name="languages" translatable="false">
        <item>@string/english</item>
        <item>@string/russian</item>
        <item>@string/spanish</item>
        <item>@string/french</item>
        <item>@string/ukrainian</item>
    </string-array>

    <string-array name="language_codes" translatable="false">
        <item>en</item>
        <item>ru</item>
        <item>es</item>
        <item>fr</item>
        <item>ua</item>
    </string-array>
    <string name="created_with">Created with</string>
    <string name="share_via">Share</string>
    <string name="exit_message">Do you really want to leave?</string>
    <string name="use_server">Use first server?</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="refresh">Refresh list</string>
    <string name="are_your_want_to_buy_vip">This picture is only available for VIP users. Do you want to continue purchase?</string>
    <string name="not_enough_to_buy_vip">You haven\'t enough VIP coins to but this picture . Do you want to continue purchase?</string>
    <string name="are_your_want_to_buy_premium">This picture is only available for PREMIUM users. Do you want to continue purchase?</string>
    <string name="not_enough_to_buy_premium">You haven\'t enough PREMIUM coins to but this picture . Do you want to continue purchase?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choice_category">Please, choose category</string>
    <string name="email">e-mail</string>
    <string name="back">Back</string>

    <string name="user_name">name</string>
    <string name="title_forgot_password">Restore password</string>
    <string name="ok_forgot_pass">New password sent to your email</string>
    <string name="invalid_login_email">Incorrect email or password</string>
    <string name="common_server_error">Common server error</string>
    <string name="service_unavailable">Service is temporarily unavailable</string>
    <string name="registration_successful">Registration was successful</string>
    <string name="missing_fields">Missing one or more of the required fields</string>
    <string name="login_already_exists">User with this login already exists</string>
    <string name="email_already_exists">User with this email already exists</string>
    <string name="invalid_password">Password must contain at least 8 characters</string>
    <string name="invalid_email">Wrong email</string>
    <string name="ok_login">Login was successful</string>
    <string name="general_error">Server is not available</string>
    <string name="log_out">Logout</string>
    <string name="log_in">Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="available_for_sending">Available for sending: </string>
    <string name="vip_premium_text">The purchase of the package opens the possibility of sending any postcard from the category \"VIP\" and also disables the display of advertising while there are postcards for sending.</string>
    <string name="premium_text">The purchase of the package opens the possibility of sending any postcard from the category \"PREMIUM\" and also disables the display of advertising while there are postcards for sending.</string>

    <string name="postcard_1_prem">1 postcard - $1,49</string>
    <string name="postcard_3_prem">3 postcards - $3,99</string>
    <string name="postcard_5_prem">5 postcards - $5.99</string>
    <string name="postcard_10_prem">10 cards - $9.99</string>

    <string name="postcard_1_vip">1 postcard - $2,99</string>
    <string name="postcard_3_vip">3 postcards - $7,99</string>
    <string name="postcard_5_vip">5 postcards - $11.99</string>
    <string name="postcard_10_vip">10 cards - $20.99</string>

    <string name="pay_button">Pay</string>
    <string name="restore">Restore</string>

    <string name="login_too_long.">"Login is too long."</string>
    <string name="google_service_unavailable">In-App Billing service is temporarily unavailable</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="invalid_password_the_same">Passwords are the same</string>
    <string name="password_changed">Password successfully changed</string>
</resources>
