<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/small_padding">

    <ImageView
        android:id="@+id/sing_in_logo_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_padding"
        android:src="@drawable/ic_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sing_in_logo_image_view"
        android:layout_marginTop="@dimen/bigger_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_login_wrapper"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorRed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password_wrapper"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/big_padding"
        android:background="@drawable/custom_button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/custom_button_color" />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/custom_button_color" />

    <Button
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_padding"
        android:paddingLeft="@dimen/base_padding"
        android:paddingRight="@dimen/base_padding"
        android:background="@drawable/custom_transparent_button"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/custom_button_transparent_color"
        android:textSize="16sp" />

</RelativeLayout>

